Fix scrollbar on FF72

--- a/ShadowFox_customization/userContent_customization.css
+++ b/ShadowFox_customization/userContent_customization.css
@@ -2,3 +2,5 @@
     color: #c0c0c0 !important;
     background: #606060 !important;
 }
+
+:root{ scrollbar-color: #474749 #323234 }
