--- a/userContent.css
+++ b/userContent.css
@@ -1722,7 +1722,7 @@ html#feedHandler .enclosures {
 }
 /*! Pop Up Background Fixes */
 @-moz-document url-prefix("moz-extension://{7fc8ef53-24ec-4205-87a4-1e745953bb0d}/popup.html"),
-url-prefix("moz-extension://ad8328bc-e1f1-4083-b657-9b20cce8ebad/pages/popup"),
+url-prefix("moz-extension://dc9c4516-df4c-4c3c-b2f8-ee3fa28d87b5/pages/popup"),
 url-prefix("moz-extension://jid1-BoFifL9Vbdl2zQ@jetpack/pages/popup"),
 url-prefix("moz-extension://{b3e677f4-1150-4387-8629-da738260a48e}/data/data/popup.html"),
 url-prefix("moz-extension://renametabtitle@mozilla.org/popup/popup.html"),
@@ -1758,7 +1758,7 @@ url-prefix("moz-extension://neaturl@hugsmile.eu/"),
 url-prefix("moz-extension://smart-referer@meh.paranoid.pk/"),
 url-prefix("moz-extension://{e225ac78-5e83-484b-a16b-b6ed0924212f}/"),
 url-prefix("moz-extension://{7fc8ef53-24ec-4205-87a4-1e745953bb0d}/"),
-url-prefix("moz-extension://ad8328bc-e1f1-4083-b657-9b20cce8ebad/"),
+url-prefix("moz-extension://dc9c4516-df4c-4c3c-b2f8-ee3fa28d87b5/"),
 url-prefix("moz-extension://skipredirect@sblask/"),
 url-prefix("moz-extension://{174b2d58-b983-4501-ab4b-07e71203cb43}/"),
 url-prefix("moz-extension://jid1-BoFifL9Vbdl2zQ@jetpack/"),
@@ -1865,7 +1865,7 @@ url-prefix("moz-extension://generic_styling_5") {
 }
 /*! Code Mirror */
 @-moz-document url-prefix("moz-extension://{aecec67f-0d10-4fa7-b7c7-609a2db280cf}/"),
-url-prefix("moz-extension://7d79798f-946b-4ba9-9e3a-1a90db426148/"),
+url-prefix("moz-extension://c26bad6b-1855-4d7f-8899-be3cab6ae4b0/"),
 url-prefix("moz-extension://uMatrix@raymondhill.net/"),
 url-prefix("moz-extension://{e4a8a97b-f2ed-450b-b12d-ee082ba24781}/src/content/edit-user-script") {
   .CodeMirror {
@@ -2494,7 +2494,7 @@ toolbarbutton#toggle-button--redirectoreinaregilssoncom-redirector[image*=disabl
 }
 /*! Alters the webextension uBlock Origin
   IMPORTANT: change the Internal UUID */
-@-moz-document url-prefix("moz-extension://7d79798f-946b-4ba9-9e3a-1a90db426148/") {
+@-moz-document url-prefix("moz-extension://c26bad6b-1855-4d7f-8899-be3cab6ae4b0/") {
   button.custom {
     background-color: var(--in-content-page-background)!important;
     background-image: none!important;
@@ -2790,7 +2790,7 @@ body.colorBlind #netFilteringDialog > .panes > .details > div[data-status="2"],
   /*! COLORBLIND MODE END */
 
 }
-@-moz-document url-prefix("moz-extension://7d79798f-946b-4ba9-9e3a-1a90db426148/logger-ui") {
+@-moz-document url-prefix("moz-extension://c26bad6b-1855-4d7f-8899-be3cab6ae4b0/logger-ui") {
   .fa-icon > svg,
   .ubo-icon > svg {
     fill: var(--in-content-page-color)!important
@@ -3609,3 +3609,5 @@ body.colorBlind #netFilteringDialog > .panes > .details > div[data-status="2"],
     color: #c0c0c0 !important;
     background: #606060 !important;
 }
+
+:root{ scrollbar-color: #474749 #323234 }
